implements mobile-first design for About Me page-- improves appearance on all screen sizes still needs tweaking, also attempted to fix visual bug on mobile version of resume page

--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,9 @@
     width: 80%;
     height: 600px;
   }
+  #skills {
+    height: auto;
+  }
   .card-img-top {
     height: 290px;
   }
@@ -12,6 +15,42 @@
   #resume {
     width: 60%;
   }
+  #about {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+  }
+  #headshot {
+    width: 80%;
+    object-fit: contain;
+    height: 300px;
+  }
+  #bio {
+    font-size: .9em;
+    text-align: center;
+    width: 80%;
+    margin-top: 10px;
+  }
+}
+@media screen and (min-width: 576px) {
+  #about {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: flex-start;
+  }
+  #headshot {
+    width: 30%;
+    object-fit: contain;
+    height: auto;
+  }
+  #bio {
+    font-size: 1em;
+    text-align: left;
+    width: 50%;
+    margin-top: 0px;
+  }
 }
 @media screen and (min-width: 768px) {
   .card, #form {
@@ -20,6 +59,15 @@
   #resume {
     width: 25%;
   }
+  #headshot {
+    width: 40%;
+    object-fit: contain;
+    max-height: 600px;
+  }
+  #bio {
+    width: 40%;
+    font-size: 1.5em;
+  }
 }
 @media screen and (min-width: 1275px) {
   .card, #form {
@@ -27,6 +75,9 @@
   }
   #resume {
     width: 20%;
+  }
+  #bio {
+    font-size: 1.75em;
   }
 }
 
